# OOP-PROJ1

./: .gitignore  CMakeLists.txt  PROJ1-Documentação.docx  PROJ1-Documentação.pptx  README.md  Ubuntu-18-Dependencies-CLANG.sh  Ubuntu-18-Dependencies-GCC.sh
src/Pokemon/: CMakeLists.txt  main.cpp  stdafx.cpp  stdafx.h
src/PokemonBLL/: CMakeLists.txt  Exceptions.cpp  Exceptions.hpp  Jogo.cpp  Jogo.hpp  Pokemon.cpp  Pokemon.hpp  Pokemoncardgenerator.cpp  Pokemoncardgenerator.hpp  Pokemonrodada.cpp  Pokemonrodada.hpp  configure.scan  stdafx.cpp  stdafx.h  tchar_templates.hpp
tests/: CMakeLists.txt
tests/PokemonBLL-Unit-Tests/: main.cpp  stdafx.h  test_pokemonbll.hpp
